[package]
name = "drive_fuse"
version = "0.12.5"
authors = ["evilDAVE <aymanfarsi99@proton.me>"]
edition = "2021"
rust-version = "1.70"
build = "build.rs"
description = "A cross-platform cloud storage mounter."
license = "MIT"

[dependencies]
# gui
egui = "0.27.1"
catppuccin-egui = { version = "5.1.0", default-features = false, features = [
    "egui27",
] }

# filesystem
directories = "5.0.1"
notify = "6.1.1"
rfd = "0.14.1"
chrono = "0.4.31"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"

# misc
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "sync"] }
rand = "0.8.5"
auto-launch = "0.5.0"
machine-uid = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "fmt",
    "std",
    "local-time",
    "time",
    "chrono",
] }
tracing-appender = "0.2.3"

[target.'cfg(windows)'.dependencies]
eframe = { version = "0.27.1", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
windows = { version = "0.56.0", features = ["Win32_Storage_FileSystem"] }
winapi = "0.3.9"
tray-item = "0.10.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.27.1", default-features = false, features = [
    "default_fonts",
    "wayland",
    "x11",
    "glow",
] }
tray-item = { version = "0.10.0", features = ["ksni"] }
png = "0.16"
whoami = "1.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
eframe = { version = "0.27.1", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
tray-item = "0.10.0"
whoami = "1.5.0"
