[package]
name = "drive_fuse"
version = "0.12.5"
authors = ["evilDAVE <aymanfarsi99@proton.me>"]
edition = "2021"
rust-version = "1.71"
build = "build.rs"
description = "A cross-platform cloud storage mounter."
license = "MIT"

[dependencies]
# gui
egui = { version = "0.28.1", features = ["rayon"] }
catppuccin-egui = { version = "5.2", default-features = false, features = [
    "egui28",
] }

# filesystem
directories = "5.0.1"
notify = "6.1.1"
rfd = "0.14.1"
chrono = "0.4.31"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"

# misc
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "sync"] }
rand = "0.8.5"
auto-launch = "0.5.0"
machine-uid = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "fmt",
    "std",
    "local-time",
    "time",
    "chrono",
] }
tracing-appender = "0.2.3"
crossbeam-channel = "0.5.13"

[target.'cfg(windows)'.dependencies]
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
] }
windows = { version = "0.56.0", features = ["Win32_Storage_FileSystem"] }
winapi = "0.3.9"
tray-item = "0.10.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts",
    "wayland",
    "x11",
    "wgpu",
    "persistence",
] }
tray-icon = { version = "0.14.3" }
image = "0.25.1"
whoami = "1.5.0"
gtk = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
] }
tray-item = "0.10.0"
whoami = "1.5.0"
